--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,5 @@ pytest>=6.0.0,<7.0.0
 httpx>=0.18.0,<0.19.0
 python-dotenv>=0.19.0,<0.20.0
 alembic>=1.7.0,<1.8.0
+requests>=2.25.0,<3.0.0
+pytest-cov>=2.12.0,<3.0.0
