--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       - /app/node_modules
     ports:
       - "3000:3000"
-    environment:
+    environment: 
       - NODE_ENV=development
-      - REACT_APP_API_URL=http://localhost:8000
+      - REACT_APP_API_URL=http://localhost:8000/api/v1
     depends_on:
       - backend
